# lendflow-backend-assessment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  main.py  manage.py  pyproject.toml
config/: settings.py  urls.py
core/: exceptions.py  services.py  tests.py  urls.py  views.py
core/services/: nyt_api_service.py
core/views/: nyt_best_sellers_view.py
