[project]
name = "lendflow-takehome-assignment"
version = "0.1.0"
description = "My solution to the Lendflow backend take-home assignment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.7",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "psycopg>=3.2.6",
    "redis>=5.2.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "django-extensions>=3.2.3",
    "django-stubs[compatible-mypy]>=5.1.3",
    "djangorestframework-stubs[compatible-mypy]>=3.15.3",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-django>=4.10.0",
    "ruff>=0.11.2",
    "types-requests>=2.32.0.20250328",
]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.mypy]
files = ["config", "core"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = "tests.py test_*.py *_tests.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM"]
ignore = ["F401"]
